--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,20 +5,23 @@ name = "ui_monitor"
 version = "0.1.0"
 
 [dependencies]
+actix-identity = "0.2.1"
 actix-rt = "1.0.0"
+actix-service = "1.0.5"
 actix-web = "2.0.0"
+chrono = {version = "0.4.13", features = ["serde"]}
 config = "0.10.1"
 deadpool-postgres = "0.5.0"
 derive_more = "0.99.2"
 dotenv = "0.15.0"
+futures = "0.3.5"
 openssl = "0.10.30"
 postgres-openssl = "0.3.0"
+postgres-types = {version = "0.1.2", features = ["with-uuid-0_8", "with-chrono-0_4"]}
+rand = "0.7.3"
 serde = {version = "1.0.104", features = ["derive"]}
+serde_json = "1.0"
 tokio-pg-mapper = "0.1"
 tokio-pg-mapper-derive = "0.1"
 tokio-postgres = "0.5.1"
-actix-identity = "0.2.1"
-futures = "0.3.5"
-serde_json = "1.0"
-rand = "0.7.3"
-actix-service = "1.0.5"
+uuid = {version = "0.8", features = ["serde", "v4"]}
