added component for showing 'percentage-queries' result, and saving and showing queries

--- a/static/frontend/package.json
+++ b/static/frontend/package.json
@@ -1,5 +1,6 @@
 {
   "name": "frontend",
+  "proxy": "http://127.0.0.1:9000/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +12,7 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-query": "^2.5.13",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
